# hiptracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cli.cpp  cli.go  cli_test.go  go.mod
docs/: arch.md  papers.md
examples/vectorAdd/: Makefile  gfx908.code  module.cpp  vectoradd_hip.cpp
hip/: Makefile  callbacks.h  hints.c  hip-fatbin.cpp  hip.c  hip.cpp  msgpuck.c  recipe.md  sqlite.c  subprocess.h
include/: InsnFactory.h  binary_inst.h  elf.h  lock_free_buffer_queue.h  msgpuck.h  progressbar.h  subprocess.hpp  trace.h
parse/: main.cpp  recipe.md
replay/: Makefile  elf.h  replay  replay.cpp  replay.h  replay.hip  trace.events  trace.ex
tools/: memtrace.hip
viz/: kripke.db  makedot.lua
